fixed z-index for #navbar

--- a/assets/css/stencil.scss
+++ b/assets/css/stencil.scss
@@ -89,6 +89,7 @@ header {
 #navbar {
 	background-color: #fff;
 	z-index: 10;
+	position: relative;
 }
 
 #mobile-menu {
